# vihara

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  MODULE.bazel  README.md  WORKSPACE.bazel  calculator.go  calculator_test.go  go.mod
.aswb/: .bazelproject
android/: .bazelproject  BUILD.bazel  android_application.bzl  deps.bzl  maven_install.json
android/app/: AndroidManifest.xml  BUILD.bazel
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/: APIService.kt  Credential.kt  MainActivity.kt  ViharaApplication.kt
android/app/src/main/kotlin/di/: AppComponent.kt  AppModule.kt  SubcomponentsModule.kt  ViewModelModule.kt
android/app/src/main/kotlin/navigation/: ViharaNavHost.kt
android/app/src/main/kotlin/ui/: CredentialViewModel.kt  ViharaApp.kt  ViharaAppState.kt
android/compose-ui/: AndroidManifest.xml  BUILD.bazel  MainActivity.kt
android/core/common/: BUILD.bazel
android/core/common/src/main/kotlin/: PropertiesReader.kt
android/core/common/src/main/kotlin/di/: DaggerViewModelFactory.kt  ViewModelFactoryModule.kt  ViewModelKey.kt
android/core/common/src/main/kotlin/env/: Env.kt
android/core/network/: BUILD.bazel
android/core/network/src/main/: AndroidManifest.xml
android/core/network/src/main/kotlin/: ViharaNetworkDataSource.kt
android/core/network/src/main/kotlin/di/: NetworkModule.kt
android/core/network/src/main/kotlin/retrofit/: RetrofitViharaNetwork.kt
android/fastlane/: Appfile  Fastfile  README.md
android/fastlane/metadata/android/id/: full_description.txt  short_description.txt
android/feature/auth/: BUILD.bazel
android/feature/auth/src/main/: AndroidManifest.xml
android/feature/auth/src/main/kotlin/: AuthActivity.kt
android/feature/auth/src/main/kotlin/di/: AuthComponent.kt  AuthComponentProvider.kt  ViewModelModule.kt
android/feature/auth/src/main/kotlin/navigation/: SinginNavigation.kt
android/feature/auth/src/main/kotlin/ui/: SinginScreen.kt  SinginViewModel.kt
android/scripts/: change_env.sh  change_version_code.sh  deploy.sh
backend/: BUILD.bazel  go.mod  go.sum  main.go
backend/services/servicea/: BUILD.bazel  handler.go  main.go
backend/services/serviceb/: BUILD.bazel  main.go
backend/services/user-service/: BUILD.bazel  local.env  main.go  sqlc.yaml
backend/services/user-service/db/: BUILD.bazel  models.go  query.sql.go
backend/services/user-service/db/migrations/: 000001_create_users_table.up.sql
backend/services/user-service/db/query/: query.sql
backend/services/user-service/model/: BUILD.bazel  create_user_params.go
backend/services/user-service/repository/: BUILD.bazel  user.go
backend/services/user-service/rest/: BUILD.bazel  user.go
backend/shared/: BUILD.bazel  auth_middleware.go
frontend/: BUILD.bazel  build_smoke_test.js  defs.bzl  index.html  lint.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.bzl
frontend/admin/: BUILD.bazel  build_smoke_test.js  defs.bzl  package.json
frontend/admin/src/: BUILD.bazel
frontend/public/: BUILD.bazel
frontend/src/: App.test.tsx  App.tsx  BUILD.bazel  index.tsx  reportWebVitas.ts
ios/: BUILD.bazel  Cartfile  Cartfile.resolved  Extension.bzl  Package.swift  swift_deps_index.json
ios/Resources/: Info.plist  LaunchScreen.storyboard  Vihara.plist
ios/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Sources/: APIService.swift  AppDelegate.swift  AppSettingsReader.swift  BUILD.bazel  BazelApp.swift  ContentView.swift  HomeView.swift  LoginView.swift  UserAuth.swift  Vihara.plist
ios/Tests/: BUILD.bazel
ios/fastlane/: Appfile  Fastfile  Matchfile  README.md
ios/test/: BUILD.bazel  HelloWorldSwiftTests.swift
proto/: BUILD.bazel  servicea.proto
