module(name = "vihara", version = "0.0.1")

_COMPOSE_VERSION = "1.2.1"

_COMPOSE_COMPILER_VERSION = "1.5.3"

_KOTLIN_COMPILER_VERSION = "1.9.10"

bazel_dep(name = "rules_jvm_external", version = "5.3")
bazel_dep(name = "rules_android", version = "0.1.1")
bazel_dep(name = "rules_kotlin", version = "1.9.0")

bazel_dep(name = "rules_xcodeproj", version = "1.14.2")
bazel_dep(name = "rules_apple", version = "3.1.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "1.13.0")

bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlin:kotlin-stdlib:{}".format(_KOTLIN_COMPILER_VERSION),
        "androidx.core:core-ktx:1.7.0",
        "androidx.appcompat:appcompat:1.4.1",
        "androidx.activity:activity-compose:1.4.0",
        "androidx.compose.material:material:{}".format(_COMPOSE_VERSION),
        "androidx.compose.ui:ui:{}".format(_COMPOSE_VERSION),
        "androidx.compose.ui:ui-tooling:{}".format(_COMPOSE_VERSION),
        "androidx.compose.compiler:compiler:{}".format(_COMPOSE_COMPILER_VERSION),
        "androidx.compose.runtime:runtime:{}".format(_COMPOSE_VERSION),
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

go_sdk = use_extension(
    "@io_bazel_rules_go//go:extensions.bzl", 
    "go_sdk"
)
go_sdk.download(version = "1.21.5")
use_repo(
    go_sdk,
    "go_toolchains",
    "io_bazel_rules_nogo"
)

register_toolchains("@go_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")

use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_golang_jwt_jwt_v5",
    "com_github_lestrrat_go_jwx_v2",
)