load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix pro.herlian/vihara
gazelle(name = "gazelle")

go_library(
    name = "vihara_lib",
    srcs = ["main.go"],
    importpath = "pro.herlian/vihara",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_binary(
    name = "backend",
    embed = [":vihara_lib"],
    visibility = ["//visibility:public"],
)
