load(
    "@rules_xcodeproj//xcodeproj:defs.bzl", 
    "top_level_target", 
    "xcodeproj",
    "xcode_provisioning_profile",
)
load(
    "@build_bazel_rules_apple//apple:ios.bzl",
    "ios_unit_test",
)
load("@build_bazel_rules_apple//apple:apple.bzl", 
    "local_provisioning_profile",
    "apple_dynamic_xcframework_import"
)
load("@rules_swift//swift:swift.bzl", "swift_library")
load(":Extension.bzl", "ios_app", "team_id")

xcodeproj(
    name = "xcodeproj",
    project_name = "App",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            ":App",
            target_environments = ["device", "simulator"],
        ),
        ":Tests"
    ],
    scheme_autogeneration_mode = "all",
)

ios_app(
    name = "App",
    provisioning_profile = ":xcode_development_profile",
)

ios_app(
    name = "DeployApp",
    provisioning_profile = ":xcode_appstore_profile",
)

swift_library(
    name = "Lib",
    srcs = glob(["Sources/*.swift"]),
    tags = ["manual"],
    data = [
        "Resources/Vihara.plist",
    ],
    deps = [
        ":Alamofire",
        ":AppAuth",
    ]
)

apple_dynamic_xcframework_import(
    name = "Alamofire",
    xcframework_imports = glob(["Carthage/Build/Alamofire.xcframework/**"]),
)

apple_dynamic_xcframework_import(
    name = "AppAuth",
    xcframework_imports = glob(["Carthage/Build/AppAuth.xcframework/**"]),
)

ios_unit_test(
    name = "Tests",
    bundle_id = "pro.herlian.vihara.tests",
    minimum_os_version = "15.0",
    test_host = ":App",
    visibility = ["//visibility:public"],
    deps = [":TestLib"],
)

swift_library(
    name = "TestLib",
    srcs = glob(["test/*.swift"]),
    tags = ["manual"],
    testonly = True,
)

# AppStore Profile
local_provisioning_profile(
    name = "local_appstore_profile",
    profile_name = "match AppStore pro.herlian.vihara",
    team_id = team_id,
)

xcode_provisioning_profile(
   name = "xcode_appstore_profile",
   team_id = team_id,
   managed_by_xcode = True,
   provisioning_profile = ":local_appstore_profile",
)

# Development Profile
local_provisioning_profile(
    name = "local_development_profile",
    profile_name = "match Development pro.herlian.vihara",
    team_id = team_id,
)

xcode_provisioning_profile(
   name = "xcode_development_profile",
   team_id = team_id,
   managed_by_xcode = True,
   provisioning_profile = ":local_development_profile",
)
