load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_grpc_library", "swift_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "servicea_proto",
    srcs = ["servicea.proto"],
    visibility = ["//visibility:public"],
)

go_grpc_library(
    name = "servicea_go_proto",
    importpath = "pro.herlian.vihara/proto",
    protos = [":servicea_proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "servicea",
    embed = [":servicea_go_proto"],
    importpath = "pro.herlian.vihara/proto",
    visibility = ["//visibility:public"],
)

swift_proto_library(
    name = "servicea_swift_proto",
    visibility = ["//visibility:public"],
    deps = [":servicea_proto"],
)

swift_grpc_library(
    name = "swift_servicea",
    srcs = [":servicea_proto"],
    flavor = "client",
    visibility = ["//visibility:public"],
    deps = [":servicea_swift_proto"],
)
