load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "shared_lib",
    srcs = ["auth_middleware.go"],
    importpath = "pro.herlian.vihara/backend/shared",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_lestrrat_go_jwx_v2//jwk",
    ],
)
