load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "servicea_lib",
    srcs = [
        "handler.go",
        "main.go",
    ],
    importpath = "pro.herlian.vihara/backend/services/servicea",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:servicea",
        "@org_golang_google_grpc//:go_default_library",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "servicea",
    embed = [":servicea_lib"],
    visibility = ["//visibility:public"],
)
